Always show scroll bar to prevent page width jump between different pages

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,6 +7,7 @@ body {
   color: $text-color;
   background-color: $background-color;
   margin: 0;
+  overflow-y: scroll;
 }
 
 h1, h2, h3, h4, h5, h6 {
